FIX Ensure GridField content is displayed on small devices
This commit adds bootstrap 4 as a dependency, in order to use the breakpoint mixins.
Also updates the webpack config to match recent core updates.

--- a/client/src/styles/admin.scss
+++ b/client/src/styles/admin.scss
@@ -1,6 +1,3 @@
-// @todo make this usable from silverstripe-admin's variable sheet
-$border-radius-sm:       .2rem !default;
-
 .elemental-edit {
   display: block;
   color: inherit;
@@ -71,10 +68,19 @@ $border-radius-sm:       .2rem !default;
   }
 }
 
-.elemental-editor .ss-gridfield-item:hover .handle {
-  opacity: 1;
-}
+.elemental-editor {
+  .ss-gridfield-item:hover .handle {
+    opacity: 1;
+  }
 
-.elemental-editor .grid-field__table {
+  .grid-field__table {
     margin-bottom: 12px;
+
+    @include media-breakpoint-down(md) {
+      // If viewing on a smaller screen, ensure the element content summary is shown
+      .col-EditorPreview {
+        display: table-cell;
+      }
+    }
+  }
 }
